# numpy_teacher

./: .gitattributes  pyproject.toml  run_tests.sh
codegen/: __main__.py  binary_to_text.py  meta_nodes.py  meta_rules.py
gpt2/: dataset_loader.py  prompt_construction.py
numpy_teacher/: __main__.py  context.py  interface.py
numpy_teacher/code_quality/: __init__.py  dataset_loader.py  evaluation.py  freq_analysis_10000_files.pkl  frequency_analysis.py  lc_tree_weights.py  score_functions.py
numpy_teacher/rewrite_rules/: __init__.py  _comprehensions.py  _core.py  _generated.py
numpy_teacher/rewrite_rules/_codegen/: __main__.py  meta_nodes.py  meta_rules.py
tests/: full.py  loops.py  options.py
