[build-system]
requires = ["setuptools", "wheel"] # setuptools-scm
build-backend = "setuptools.build_meta"

[project]
name = "numpy_teacher"
description = "A linter that teaches beginners how to use Numpy."
version = "0.0a0"
requires-python = ">=3.10"
dependencies = [
]

[tool.setuptools]
packages = ["numpy_teacher"]
